Added tag->hiccup, support for Java 9+